stub some fixture data

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "grunt-cli": "*",
         "grunt-jasmine-node": "~0.2.1",
         "jasmine-reporters": "~0.2.1",
-        "jasmine-node": "~2.0.0",
-        "request": "~2.34.0"
+        "jasmine-node": "~2.0.0"
     },
     "dependencies": {
+        "request": "~2.34.0",
         "q": "1.0.1",
         "feedparser": "0.19.1"
     }
