--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "request": "~2.34.0",
         "q": "1.0.1",
-        "feedparser": "0.19.1"
+        "feedparser": "0.19.1",
+        "xml2js": "0.4.4"
     }
 }
