--- a/config/hero-config.staging.json
+++ b/config/hero-config.staging.json
@@ -1,15 +1,17 @@
 {
-    "port": 8082,
+    "port": 8083,
 
     "countryCode": "+231",
 
     "valueSetEndPoint": "http://liberia-staging.mhero.org:5001/CSD/SVS/RetrieveValueSet",
 
-    "practitionerEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/merge_liberia_sep_12_2014-0/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_practitioner_read/adapter/fhir/Practitioner/_search?_format=json&name.text=&organization.reference=&location.reference=",
-    "practitionerUpdateEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/merge_liberia_sep_12_2014-0/careServicesRequest/update",
+    "practitionerEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_practitioner_read/adapter/fhir/Practitioner/_search?_format=json&name.text=&organization.reference=&location.reference=&_count=10",
 
-    "locationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/merge_liberia_sep_12_2014-0/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_location_read/adapter/fhir/Location/_search?_format=json&name=&managingOrganization.reference=",
-    "organisationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/merge_liberia_sep_12_2014-0/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_organization_read/adapter/fhir/Organization/_search?_format=json&name=&partOf.reference=",
+    "practitionerUpdateEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/update",
 
-    "rapidProContactEndPoint": "https://rapidpro.io/api/v1/contacts.json"
+    "locationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_location_read/adapter/fhir/Location/_search?_format=json&name=&managingOrganization.reference=&_count=10",
+
+    "organisationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_organization_read/adapter/fhir/Organization/_search?_format=json&name=&partOf.reference=&_count=10",
+
+    "rapidProAPIEndPoint": "https://rapidpro.io/api/v1"
 }
