--- a/config/hero-config.staging.json
+++ b/config/hero-config.staging.json
@@ -3,15 +3,15 @@
 
     "countryCode": "+231",
 
-    "valueSetEndPoint": "http://liberia-staging.mhero.org:5001/CSD/SVS/RetrieveValueSet",
+    "valueSetEndPoint": "http://127.0.0.1:9984/CSD/SVS/RetrieveValueSet",
 
-    "practitionerEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_practitioner_read/adapter/fhir/Practitioner/_search?_format=json&name.text=&organization.reference=&location.reference=&_count=10",
+    "practitionerEndPoint": "http://127.0.0.1:9984/CSD/csr/csd_manage_liberia/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_practitioner_read/adapter/fhir/Practitioner/_search?_format=json&name.text=&organization.reference=&location.reference=&_count=",
 
-    "practitionerUpdateEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/update",
+    "practitionerUpdateEndPoint": "http://127.0.0.1:9984/CSD/csr/csd_manage_liberia/careServicesRequest/update",
 
-    "locationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_location_read/adapter/fhir/Location/_search?_format=json&name=&managingOrganization.reference=&_count=10",
+    "locationEndPoint": "http://127.0.0.1:9984/CSD/csr/csd_manage_liberia/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_location_read/adapter/fhir/Location/_search?_format=json&name=&managingOrganization.reference=&_count=",
 
-    "organisationEndPoint": "http://liberia-staging.mhero.org:5001/CSD/csr/manage_liberia_development/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_organization_read/adapter/fhir/Organization/_search?_format=json&name=&partOf.reference=&_count=10",
+    "organisationEndPoint": "http://127.0.0.1:9984/CSD/csr/csd_manage_liberia/careServicesRequest/urn:openhie.org:openinfoman-fhir:fhir_organization_read/adapter/fhir/Organization/_search?_format=json&name=&partOf.reference=&_count=",
 
     "rapidProAPIEndPoint": "https://rapidpro.io/api/v1"
 }
