push is now sync. b/c getting too many files open error

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "mhero-synch",
-    "description": "synchronisation coordinator between HWR and RapidPro",
-    "version": "0.0.1",
-    "devDependencies": {
-        "grunt": "0.4.1",
-        "grunt-cli": "*",
-        "grunt-env": "0.4.1",
-        "grunt-jasmine-node": "~0.2.1",
-        "jasmine-reporters": "~0.2.1",
-        "jasmine-node": "~2.0.0"
-    },
-    "dependencies": {
-        "request": "~2.34.0",
-        "q": "1.0.1",
-        "btoa": "1.1.2",
-        "xml2js": "0.4.4"
-    }
+  "name": "mhero-synch",
+  "description": "synchronisation coordinator between HWR and RapidPro",
+  "version": "0.0.1",
+  "devDependencies": {
+    "grunt": "0.4.1",
+    "grunt-cli": "*",
+    "grunt-env": "0.4.1",
+    "grunt-jasmine-node": "~0.2.1",
+    "jasmine-reporters": "~0.2.1",
+    "jasmine-node": "~2.0.0"
+  },
+  "dependencies": {
+    "btoa": "1.1.2",
+    "q": "1.0.1",
+    "request": "~2.34.0",
+    "sync-request": "~1.0.1",
+    "xml2js": "0.4.4"
+  }
 }
